<resources>
    <string name="app_name">4 Android Coroutines Room</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint_username">User name</string>
    <string name="login_hint_password">Password</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_gotoSignUp">Go to Signup</string>
    <string name="main_txt_signedAs">You\'re now signed in as</string>
    <string name="main_btn_logout">Log out</string>
    <string name="main_btn_deleteUser">Delete user</string>
</resources>
